modified some files

--- a/main.html
+++ b/main.html
@@ -100,8 +100,8 @@
                     </div>
                 </div>
                 <div class="rightnav">
-                    <div><button class="acc-btn signup-btn roboto-medium" onclick="window.open('signup.html', '_self');">Sign up</button></div>
-                    <div><button class="acc-btn login-btn roboto-medium" onclick="window.open('login.html', '_self');">Log in</button></div>
+                    <div><button class="acc-btn signup-btn roboto-medium" onclick="window.open('sign_up.html'),window.close('main.html')">Sign up</button></div>
+                    <div><button class="acc-btn login-btn roboto-medium" onclick="window.open('login.html'),window.close('main.html')">Log in</button></div>
                 </div>
             </div>
             <div class="main">
