--- a/login.html
+++ b/login.html
@@ -1,70 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Spotify</title>
-    <link rel="stylesheet" href="login.css">
-    <link rel="shortcut icon" href="assets/login-favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;500&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <div class="header">
-        <div>
-            <img src="assets/login-logo.png" alt="Spotify" class="navlogo">
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Log in - Spotify</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="spotify.svg"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="login.css" />
+  </head>
+  <body>
+    <div class="logo">
+      <i class="bi bi-spotify"></i>
+      <p>Spotify</p>
     </div>
-
     <div class="container">
-        <div class="main">
-            <section class="continuebtn">
-                <h1>Log in to Spotify</h1>
-                <button class="btn">
-                    <span class="google"></span><span class="txt"  onclick="window.open('index.html', '_self')">Continue with Google</span>
-                </button>
-                <button class="btn">
-                    <span class="fb"></span><span class="txt" onclick="window.open('index.html', '_self')">Continue with Facebook</span>
-                </button>
-                <button class="btn">
-                    <span class="apple"></span><span class="txt" onclick="window.open('index.html', '_self')">Continue with Apple</span>
-                </button>
-                <button class="btn">
-                    <span class="phnum"></span><span class="txt" onclick="window.open('index.html', '_self')">Continue with phone number</span>
-                </button>
+      <p class="heading">Log in to Spotify</p>
+      <div class="warning">
+        <i class="bi bi-exclamation-circle"></i>
+        <p>
+          You do not have a Spotify account connected to your Google Account. If
+          you have a Spotify account, please try log in with your Spotify email
+          or username. If you do not have a Spotify account, please sign up.
+        </p>
+      </div>
+      <div class="alternate">
+        <button onclick="show_warning()">
+          <i class="bi bi-google"></i>
+          <p>Sign in with Google</p>
+        </button>
+        <button onclick="show_warning()">
+          <i class="bi bi-facebook"></i>
+          <p>Sign in with Facebook</p>
+        </button>
+        <button onclick="show_warning()">
+          <i class="bi bi-apple"></i>
+          <p>Sign in with Apple</p>
+        </button>
+        <button onclick="show_warning()">
+            <i class="bi bi-phone"></i>
+          <p>Continue with Phone Number</p>
+        </button>
+      </div>
+      <hr />
 
-                <hr>
-
-                <div class="formtxt">
-                    <label for="usern"><span>Email or username</span></label>
-                </div>
-                <input type="text" name="usern" id="username" class="formitem" placeholder="Email or username" required>
-                <div class="formtxt">
-                    <label for="passw"><span>Password</span></label>
-                </div>
-                <input type="password" name="passw" id="password" placeholder="Password" class="formitem" required >
-                <input type="button" value="Log in" class="submit" onclick="window.open('index.html', '_self')">
-
-                <div class="forget">
-                    <a href="" class="hvr">Forget your password?</a>
-                </div>
-
-                <hr>
-
-                <div class="signup">
-                    <span>Don't have an account? &nbsp;</span><a href="signup.html" class="hvr">Sign up for Spotify</a>
-                </div>
-            </section>
+      <form id="myform" action="" method="">
+        <p id="wrong_detail">Username or password is incorrect</p>
+        <label for="email"><p class="label">Email or Username</p></label>
+        <input id="email" type="email" placeholder="name@domain.com" />
+        <div class="warning">
+          <p class="warn">
+            <i class="bi bi-exclamation-circle"></i> This email is invalid. Make
+            sure it's written like example@email.com
+          </p>
         </div>
+        <label for="pass"><p class="label">Password</p></label>
+        <div class="password_div">
+            <input id="pass" type="password" placeholder="Password" />
+            <i class="bi bi-eye-slash-fill pass_show" onclick="type_change()"  ></i>
+        </div>
+        <div class="toggle_btn">
+          <input type="checkbox" id="switch" class="checkbox" />
+          <label for="switch" class="toggle">
+          </label>
+          <p id="me">Remember me</p>
+        </div>
+        <button form="myform" class="submit" type="submit" onclick="form_submit('index.html')">Log In</button>
+      </form>
+      <p id="forgot">Forgot your password?</p>
+      <hr />
+      <p id="no_acc">
+        Don't have an account?  <a href="sign_up.html" style="color:white"><p id="sign_in">
+         Sign up for Spotify</p></a>
+      </p>
     </div>
-    <footer>
-        <span>
-            This site is protected by reCAPTCHA and the Google <a href="">Privacy Policy</a> and <a href="">Terms of Service</a> apply.
-        </span>
-    </footer>
-</body>
-
+    <div class="footer">
+      <p id="capcha">
+        This site is protected by reCAPTCHA and the Google Privacy Policy and
+        Terms of Service apply.
+      </p>
+    </div>
+    <script src="login.js"></script>
+  </body>
 </html>
